[package]
name = "currency_converter"
version = "0.1.0"
authors = ["Yufeng Xia"]
edition = "2018"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

