[package]
name = "currency_converter_cli"
version = "0.1.0"
authors = ["Alex Xia"]
description = "A simple CLI tool to convert GBP to CNY using real-time exchange rates."
edition = "2018"
license = "MIT"
homepage ="https://github.com/xyf2002/currency_converter"

repository ="https://github.com/xyf2002/currency_converter"
keywords = ["currency", "converter", "rates", "cli"]
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

